--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,16 +39,16 @@
     line-height: 31px;
     text-align: center;
     color: #1E0E62;
-    
+
 }
 
 .item {
-    font-family: DM Sans;
+    font-family: "DM Sans", sans-serif;
     font-size: 18px;
     line-height: 26px;
     text-align: left;
     color: #15143966;
-    
+
 }
 
 .high {
@@ -183,13 +183,49 @@
     text-align: left;
     margin-left: 80px;
     margin-top: 20px;
-    color:  #15143966;
+    color: #15143966;
     font-weight: 700;
 }
-.drop{
+
+.dropbtn {
+    background-color: white;
+    padding: 16px;
     border: none;
     color: #15143966;
-        font-family:" DM Sans",sans-serif;
-        font-size: 18px;
-        line-height: 26px;
+    font-family: " DM Sans", sans-serif;
+    font-size: 18px;
+    line-height: 26px;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: white;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    font-family: "DM Sans", sans-serif;
+    font-size: 18px;
+    line-height: 26px;
+    text-align: left;
+    color: #15143966;
+}
+
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
 }
